--- a/index.html
+++ b/index.html
@@ -2,16 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Group Summative</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" />
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div>
-		<div class="part">hey</div>
-		<div class="part">hey</div>
-		<div class="part"></div>
-		<div class="part"></div>
+	
+
+	<div class="" id="map-buses">
+		
 	</div>
-	<h1>Your website Maria hellow</h1>
+
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>
+	<script src="vendore/tilt/tilt.js"></script>
+	<script src="vendore/underscore/underscore.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
