--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<title>Group Summative</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" />
+	<link href="https://fonts.googleapis.com/css?family=Muli:300,400,600" rel="stylesheet">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	
-
-	<div class="" id="map-buses">
-		
+	<div class="wrapper">
+		<section class="section-1"></section>
+		<section class="section-2"></section>
+		<section class="section-3"></section>
 	</div>
-
-
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>
