--- a/index.html
+++ b/index.html
@@ -15,7 +15,55 @@
 	<div class="wrapper">
 		<section class="section-1"></section>
 		<section class="section-2"></section>
-		<section class="section-3"></section>
+		<section class="section-3">
+			<div class="header">
+				<div class="logo"></div>
+				<div class="location-title"></div>
+			</div>
+
+			<div class="accordion choices-list">
+				<div class="choices accomodation">
+					<div class="choice-name"></div>
+					<div class="drop-btn"></div>
+				</div>
+				<div class="choices arts-culture">
+					<div class="choice-name"></div>
+					<div class="drop-btn"></div>
+				</div>
+				<div class="choices buses">
+					<div class="choice-name"></div>
+					<div class="drop-btn"></div>
+				</div>
+				<div class="choices food-beverage">
+					<div class="choice-name"></div>
+					<div class="drop-btn"></div>
+				</div>
+				<div class="choices parks-walks">
+					<div class="choice-name"></div>
+					<div class="drop-btn"></div>
+				</div>
+
+				<div id="map" class="map">
+					<div class="map-header">
+						<div class="travel-to"></div>
+						<div class="close-btn"></div>
+					</div>
+					<div class="map-details">
+						<div class="details-text">
+							<div class="details-name"></div>
+							<div class="details-location"></div>
+							<div class="details-rating"></div>
+						</div>
+						<div class="details-image"></div>
+					</div>
+				</div>
+			</div>
+
+			<div class="footer">
+				<div class="back-btn"></div>
+				<div class="location-choice"></div>
+			</div>
+		</section>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
