added section 4 - map

--- a/index.html
+++ b/index.html
@@ -42,23 +42,34 @@
 					<div class="choice-name"></div>
 					<div class="drop-btn"></div>
 				</div>
-
-				<div id="map" class="map">
-					<div class="map-header">
-						<div class="travel-to"></div>
-						<div class="close-btn"></div>
+			</div>
+			<div class="footer">
+				<div class="back-btn"></div>
+				<div class="location-choice"></div>
+			</div>
+		</section>
+		<section class="section-4">
+			<div class="header">
+				<div class="logo"></div>
+				<div class="location-title"></div>
+			</div>
+			<div id="map" class="map">
+			</div>
+			<div class="pop-up">
+				
+				<div class="map-header">
+					<div class="travel-to"></div>
+					<div class="close-btn"></div>
+				</div>
+				<div class="map-details">
+					<div class="details-text">
+						<div class="details-name"></div>
+						<div class="details-location"></div>
+						<div class="details-rating"></div>
 					</div>
-					<div class="map-details">
-						<div class="details-text">
-							<div class="details-name"></div>
-							<div class="details-location"></div>
-							<div class="details-rating"></div>
-						</div>
-						<div class="details-image"></div>
-					</div>
+					<div class="details-image"></div>
 				</div>
 			</div>
-
 			<div class="footer">
 				<div class="back-btn"></div>
 				<div class="location-choice"></div>
