created section 2 HTML

--- a/index.html
+++ b/index.html
@@ -14,7 +14,30 @@
 	
 	<div class="wrapper">
 		<section class="section-1"></section>
-		<section class="section-2"></section>
+		<section class="section-2">
+			
+			<div class="header">
+				<div class="logo-full"></div>
+			</div>
+
+			<div class="select">
+				<p>Select Place</p>
+			</div>
+
+			<div class="dropdown">
+			  	<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Locations </button>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+					<button class="dropdown-item" type="button">Auckland Cental</button>
+					<button class="dropdown-item" type="button">Rodney & North Shore</button>
+					<button class="dropdown-item" type="button">Waitakere & West Auckland</button>
+					<button class="dropdown-item" type="button">Manukau & East Auckland</button>
+					<button class="dropdown-item" type="button">Papakura & Franklin</button>					
+				</div>
+			</div>
+
+			<div class="explore"></div>
+
+		</section>
 		<section class="section-3">
 			<div class="header">
 				<div class="logo"></div>
