Applied height:100vh for each section, added comments in theme.scss

--- a/index.html
+++ b/index.html
@@ -13,32 +13,43 @@
 <body>
 	
 	<div class="wrapper">
-		<section class="section-1"></section>
-		<section class="section-2"></section>
-		<section class="section-3">
+		<section class="section section-1">
+			<div class="content">
+				<div>
+					<img class="img-gritting" src="assets/images/hello.png" alt="HELLO">
+				</div>
+				<div class="loading-anime">
+					<div class="small-circle"></div>
+					<div class="small-circle"></div>
+					<div class="small-circle"></div>
+				</div>
+			</div>
+		</section>
+		<section class="section section-2"></section>
+		<section class="section section-3">
 			<div class="header">
 				<div class="logo"></div>
 				<div class="location-title"></div>
 			</div>
 
 			<div class="accordion choices-list">
-				<div class="choices accomodation">
+				<div class="choices row accomodation">
 					<div class="choice-name"></div>
 					<div class="drop-btn"></div>
 				</div>
-				<div class="choices arts-culture">
+				<div class="choices row arts-culture">
 					<div class="choice-name"></div>
 					<div class="drop-btn"></div>
 				</div>
-				<div class="choices buses">
+				<div class="choices row buses">
 					<div class="choice-name"></div>
 					<div class="drop-btn"></div>
 				</div>
-				<div class="choices food-beverage">
+				<div class="choices row food-beverage">
 					<div class="choice-name"></div>
 					<div class="drop-btn"></div>
 				</div>
-				<div class="choices parks-walks">
+				<div class="choices row parks-walks">
 					<div class="choice-name"></div>
 					<div class="drop-btn"></div>
 				</div>
@@ -48,7 +59,7 @@
 				<div class="location-choice"></div>
 			</div>
 		</section>
-		<section class="section-4">
+		<section class="section section-4">
 			<div class="header">
 				<div class="logo"></div>
 				<div class="location-title"></div>
