--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
 
 			<div class="header">
 				<div class="logo">
-					<svg viewBox="0 0 150 150" enable-background="new 0 0 100 100" xml:space="preserve" fill="#FE5F55">
+					<svg viewBox="0 0 100 100" fill="#FE5F55">
 						<path d="M49.8,12.5c-12.4,0-22.5,10.1-22.5,22.5s10.1,22.5,22.5,22.5S72.3,47.4,72.3,35S62.2,12.5,49.8,12.5z M49.8,47.5  c-6.9,0-12.5-5.6-12.5-12.5s5.6-12.5,12.5-12.5S62.3,28.1,62.3,35S56.6,47.5,49.8,47.5z"/>
 						<path d="M78,63.3c15.6-15.6,15.6-41,0-56.6L71,13.8c11.7,11.7,11.7,30.7,0,42.4C65.3,61.9,57.8,65,49.8,65c-8,0-15.5-3.1-21.2-8.8  l-7.1,7.1c6.4,6.4,14.6,10.4,23.5,11.4V85H30v10h40V85H55V74.7C63.7,73.5,71.7,69.6,78,63.3z"/>
 					</svg>
 				</div>
-				<div class="location-title"></div>
+				<div class="location-title">
+					<h1>Hello</h1>
+				</div>
 			</div>
 
 			<div class="accordion choices-list">
@@ -86,14 +88,20 @@
 				</div>
 			</div>
 			<div class="footer">
-				<div class="back-btn"></div>
-				<div class="location-choice"></div>
+				<div class="back-btn"><i class="fas fa-arrow-left"></i></div>
 			</div>
 		</section>
 		<section class="section section-4">
 			<div class="header">
-				<div class="logo"></div>
-				<div class="location-title"></div>
+				<div class="logo">
+					<svg viewBox="0 0 100 100" fill="#FE5F55">
+						<path d="M49.8,12.5c-12.4,0-22.5,10.1-22.5,22.5s10.1,22.5,22.5,22.5S72.3,47.4,72.3,35S62.2,12.5,49.8,12.5z M49.8,47.5  c-6.9,0-12.5-5.6-12.5-12.5s5.6-12.5,12.5-12.5S62.3,28.1,62.3,35S56.6,47.5,49.8,47.5z"/>
+						<path d="M78,63.3c15.6-15.6,15.6-41,0-56.6L71,13.8c11.7,11.7,11.7,30.7,0,42.4C65.3,61.9,57.8,65,49.8,65c-8,0-15.5-3.1-21.2-8.8  l-7.1,7.1c6.4,6.4,14.6,10.4,23.5,11.4V85H30v10h40V85H55V74.7C63.7,73.5,71.7,69.6,78,63.3z"/>
+					</svg>
+				</div>
+				<div class="location-title">
+					<h1>Hello</h1>
+				</div>
 			</div>
 			<div id="map" class="map">
 			</div>
@@ -113,8 +121,10 @@
 				</div>
 			</div>
 			<div class="footer">
-				<div class="back-btn"></div>
-				<div class="location-choice"></div>
+				<div class="back-btn"><i class="fas fa-arrow-left"></i></div>
+				<div class="location-title">
+					<h1>Hello</h1>
+				</div>
 			</div>
 		</section>
 	</div>
