section 4: map, section 3: icons

--- a/index.html
+++ b/index.html
@@ -139,19 +139,7 @@
 				</div>
 			</div>
 			
-			<div class="pop-up">
-				<div class="map-header">
-					<div class="travel-to"></div>
-					<div class="close-btn"></div>
-				</div>
-				<div class="map-details">
-					<div class="details-text">
-						<div class="details-name"></div>
-						<div class="details-location"></div>
-						<div class="details-rating"></div>
-					</div>
-					<div class="details-image"></div>
-				</div>
+			<div id="map">
 			</div>
 
 			<div class="footer">
