added in new section 1 for Ryan

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	<div class="wrapper">
 
-		<section class="section section-1">
+		<section class="section section-0">
 			<div class="content">
 				<div>
 					<img class="img-gritting" src="assets/images/hello.png" alt="HELLO">
@@ -25,6 +25,9 @@
 					<div class="small-circle"></div>
 				</div>
 			</div>
+		</section>
+		<section class="section section-1">
+			
 		</section>
 
 		<section class="section section-2">
