completed CSS for section two

--- a/index.html
+++ b/index.html
@@ -33,25 +33,32 @@
 		<section class="section section-2">
 			
 			<div class="header">
-				<div class="logo-full"></div>
-			</div>
-
-			<div class="select">
-				<p>Select Place</p>
-			</div>
-
-			<div class="dropdown">
-			  	<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Locations </button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-					<button class="dropdown-item" type="button">Auckland Cental</button>
-					<button class="dropdown-item" type="button">Rodney & North Shore</button>
-					<button class="dropdown-item" type="button">Waitakere & West Auckland</button>
-					<button class="dropdown-item" type="button">Manukau & East Auckland</button>
-					<button class="dropdown-item" type="button">Papakura & Franklin</button>					
+				<div class="logo-full">
+					<img src="assets/images/logo-red.png" alt="">
 				</div>
 			</div>
+			
+			<div class="select-wrap">
+				<div class="select">
+					<p>Select Place</p>
+				</div>
+				<div class="location">
+					<div class="dropdown">
+					  	<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Locations </button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+							<button class="dropdown-item" type="button">Auckland Cental</button>
+							<button class="dropdown-item" type="button">Rodney & North Shore</button>
+							<button class="dropdown-item" type="button">Waitakere & West Auckland</button>
+							<button class="dropdown-item" type="button">Manukau & East Auckland</button>
+							<button class="dropdown-item" type="button">Papakura & Franklin</button>					
+						</div>
+					</div>
 
-			<div class="explore"></div>
+					<div class="explore">
+						<img src="assets/images/explore.png" alt="">
+					</div>
+				</div>
+			</div>
 		</section>
 
 		<section class="section section-3">
