--- a/index.html
+++ b/index.html
@@ -26,9 +26,55 @@
 				</div>
 			</div>
 		</section>
-		<section class="section section-1">
-			
-		</section>
+
+<section class="section section-1">
+	<div class="s1-logo">
+		
+	</div>
+	<div class="login-box">
+			<div class="neutral login current">Login
+			</div>
+			<div class="neutral sign-up ">Sign up
+			</div>
+		<div class="box">
+			<form action="login" class=" form login-form active">
+					<div class="input-field l-username">
+						<i class="fas fa-user"></i>
+							<input type="text" name="" class="input" data-type="lUserName" placeholder="Username">
+					</div>
+
+					<div class="input-field l-password">	
+						<i class="fas fa-key"></i>
+							<input type="text" name="" class="input" data-type="lPassword" placeholder="Password">
+					</div>
+			</form>
+
+			<form action="sign-up" class=" form sign-in-form">
+				<div class="input-field s-email">
+					<i class="fas fa-envelope"></i>
+						<input type="text" name="" class="input" data-type="sEmail" placeholder="Email">
+				</div>
+
+				<div class="input-field s-username">
+					<i class="fas fa-user"></i>
+						<input type="text" name="" class="input" data-type="sUserName" placeholder="Username">
+				</div>
+
+				<div class="input-field s-password">
+					<i class="fas fa-key"></i>
+						<input type="text" name="" class="input" data-type="sPassword" placeholder="Password">
+				</div>
+
+				<div class="input-field s-c-password">
+					<i class="fas fa-key"></i>
+						<input type="text" name="confirm-password" class="input" data-type="sCPassword" placeholder="Confirm Password">
+				</div>
+			</form>
+		</div>
+		<button class="btn1">
+		</button>
+	</div>
+</section>
 
 		<section class="section section-2">
 			
