--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<script src="vendore/tilt/tilt.js"></script>
 	<script src="vendore/underscore/underscore.js"></script>
 	<script src="js/script.js"></script>
