--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				</div>
 			</div>
 		</section>
-		<section class="section section-1">
+<!-- 		<section class="section section-1">
 			
-		</section>
+		</section> -->
 
 		<section class="section section-2">
 			
@@ -46,7 +46,7 @@
 					<div class="dropdown">
 					  	<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Locations </button>
 						<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-							<button class="dropdown-item" type="button">Auckland Cental</button>
+							<button class="dropdown-item" type="button">Auckland Central</button>
 							<button class="dropdown-item" type="button">Rodney & North Shore</button>
 							<button class="dropdown-item" type="button">Waitakere & West Auckland</button>
 							<button class="dropdown-item" type="button">Manukau & East Auckland</button>
@@ -131,7 +131,7 @@
 					<i class="fas fa-arrow-left"></i>
 				</div>
 				<div class="location-choice">
-					<h1>Hello</h1>
+					<h1>HELLO</h1>
 				</div>
 			</div>
 		</section>
@@ -157,7 +157,7 @@
 					<i class="fas fa-arrow-left"></i>
 				</div>
 				<div class="location-choice">
-					<h1>Hello</h1>
+					<h1>HELLO</h1>
 				</div>
 			</div>
 		</section>
@@ -165,6 +165,8 @@
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="vendore/popper/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<script src="vendore/tilt/tilt.js"></script>
