Finished loading page animation. Started Navigation.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 	
 	<div class="wrapper">
 
-		<section class="section section-0">
+		<section id="loading-page" class="section section-0">
 			<div class="content">
 				<div>
 					<img class="img-gritting" src="assets/images/hello.png" alt="HELLO">
 				</div>
-				<div class="loading-anime">
-					<div class="small-circle"></div>
-					<div class="small-circle"></div>
-					<div class="small-circle"></div>
+				<div id="loading-anime">
+					<div class="small-circle small-circle1"></div>
+					<div class="small-circle small-circle2"></div>
+					<div class="small-circle small-circle3"></div>
 				</div>
 			</div>
 		</section>
@@ -30,7 +30,7 @@
 			
 		</section>
  -->
-		<section class="section section-2">
+		<section class="section section-2 current-section">
 			
 			<div class="header">
 				<div class="logo-full">
@@ -125,7 +125,7 @@
 				</div>
 			</div>
 			<div class="footer">
-				<div class="back-btn">
+				<div id="back-selectsuburb" class="back-btn">
 					<i class="fas fa-arrow-left"></i>
 				</div>
 				<div class="location-choice">
@@ -134,7 +134,7 @@
 			</div>
 		</section>
 
-		<section class="section section-4">
+		<section class="section section-4 slide-in">
 			<div class="header">
 				<div class="logo">
 					<svg viewBox="0 0 120 120" enable-background="new 0 0 100 100" xml:space="preserve" fill="#FE5F55">
@@ -151,7 +151,7 @@
 			</div>
 
 			<div class="footer">
-				<div class="back-btn">
+				<div id="back-selectplaces" class="back-btn">
 					<i class="fas fa-arrow-left"></i>
 				</div>
 				<div class="location-choice">
@@ -168,6 +168,7 @@
 	<script src="vendore/popper/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="vendore/underscore/underscore.js"></script>
+	<script src="vendore/anime/anime.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<script src="assets/data/auckland-suburbs.js"></script>
 	<script src="js/script.js"></script>
