--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				</div>
 			</div>
 		</section>
-		<section class="section section-1">
+		<!--<section class="section section-1">
 			
-		</section>
+		</section>-->
 
 		<section class="section section-2">
 			
@@ -46,11 +46,11 @@
 					<div class="dropdown">
 					  	<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Locations </button>
 						<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-							<button class="dropdown-item" type="button">Auckland Cental</button>
-							<button class="dropdown-item" type="button">Rodney & North Shore</button>
-							<button class="dropdown-item" type="button">Waitakere & West Auckland</button>
-							<button class="dropdown-item" type="button">Manukau & East Auckland</button>
-							<button class="dropdown-item" type="button">Papakura & Franklin</button>					
+							<button class="dropdown-item" type="button" data-lat="-36.86667" data-lng="174.76667">Auckland Central</button>
+							<button class="dropdown-item" type="button" data-lat="-36.8" data-lng="174.75">Rodney & North Shore</button>
+							<button class="dropdown-item" type="button" data-lat="-36.91754" data-lng="174.65773">Waitakere & West Auckland</button>
+							<button class="dropdown-item" type="button" data-lat="-36.99282" data-lng="174.87986">Manukau & East Auckland</button>
+							<button class="dropdown-item" type="button" data-lat="-37.06573" data-lng="174.94393">Papakura & Franklin</button>					
 						</div>
 					</div>
 
@@ -77,7 +77,7 @@
 
 			<div class="accordion choices-list">
 
-				<div class="choices row popular">
+				<div class="choices row popular" data-choice="popular">
 					<div class="choice-name">
 						<h1>Popular</h1>
 					</div>
@@ -85,15 +85,24 @@
 						<i class="fas fa-star"></i>
 					</div>
 				</div>
-				<div class="choices row accomodation">
+
+				<div class="choices row food" data-choice="">
 					<div class="choice-name">
-						<h1>Accomodation</h1>
+						<h1>Food</h1>
 					</div>
 					<div class="drop-btn">
-						<i class="fas fa-hotel"></i>
+						<i class="fas fa-utensils"></i>
 					</div>
 				</div>
-				<div class="choices row arts-culture">
+				<div class="choices row beverage" data-choice="">
+					<div class="choice-name">
+						<h1>Beverages</h1>
+					</div>
+					<div class="drop-btn">
+						<i class="fas fa-coffee"></i>
+					</div>
+				</div>
+				<div class="choices row arts-culture" data-choice="">
 					<div class="choice-name">
 						<h1>Arts & Culture</h1>
 					</div>
@@ -101,23 +110,7 @@
 						<i class="fas fa-theater-masks"></i>
 					</div>
 				</div>
-				<div class="choices row buses">
-					<div class="choice-name">
-						<h1>Buses</h1>
-					</div>
-					<div class="drop-btn">
-						<i class="fas fa-bus-alt"></i>
-					</div>
-				</div>
-				<div class="choices row food-beverage">
-					<div class="choice-name">
-						<h1>Food & Beverages</h1>
-					</div>
-					<div class="drop-btn">
-						<i class="fas fa-coffee"></i>
-					</div>
-				</div>
-				<div class="choices row parks-walks">
+				<div class="choices row parks-walks" data-choice="">
 					<div class="choice-name">
 						<h1>Parks & Walks</h1>
 					</div>
@@ -125,6 +118,16 @@
 						<i class="fas fa-tree"></i>
 					</div>
 				</div>
+
+				<div class="choices row transport" data-choice="">
+					<div class="choice-name">
+						<h1>Transport</h1>
+					</div>
+					<div class="drop-btn">
+						<i class="fas fa-bus-alt"></i>
+					</div>
+				</div>
+
 			</div>
 			<div class="footer">
 				<div class="back-btn">
@@ -165,6 +168,8 @@
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="vendore/popper/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>
 	<script src="vendore/tilt/tilt.js"></script>
 	<script src="vendore/underscore/underscore.js"></script>
