--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</div>
 				<div class="location">
 					<div class="dropdown">
-					  	<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Locations </button>
+					  	<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Locations </button>
 						<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
 							<button class="dropdown-item" type="button" data-lat="-36.86667" data-lng="174.76667">Auckland Central</button>
 							<button class="dropdown-item" type="button" data-lat="-36.8" data-lng="174.75">Rodney & North Shore</button>
@@ -71,7 +71,7 @@
 					</svg>
 				</div>
 				<div class="location-title">
-					<h1>HELLO</h1>
+					<h3 >Auckland</h3>
 				</div>
 			</div>
 
@@ -79,49 +79,49 @@
 
 				<div class="choices row popular" data-choice="popular">
 					<div class="choice-name">
-						<h1>Popular</h1>
+						<h3>Popular</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-star"></i>
 					</div>
 				</div>
 
-				<div class="choices row food" data-choice="">
+				<div class="choices row food" data-choice="food">
 					<div class="choice-name">
-						<h1>Food</h1>
+						<h3>Food</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-utensils"></i>
 					</div>
 				</div>
-				<div class="choices row beverage" data-choice="">
+				<div class="choices row beverage" data-choice="beverage">
 					<div class="choice-name">
-						<h1>Beverages</h1>
+						<h3>Beverages</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-coffee"></i>
 					</div>
 				</div>
-				<div class="choices row arts-culture" data-choice="">
+				<div class="choices row arts-culture" data-choice="arts">
 					<div class="choice-name">
-						<h1>Arts & Culture</h1>
+						<h3>Arts & Culture</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-theater-masks"></i>
 					</div>
 				</div>
-				<div class="choices row parks-walks" data-choice="">
+				<div class="choices row parks-walks" data-choice="parks">
 					<div class="choice-name">
-						<h1>Parks & Walks</h1>
+						<h3>Parks & Walks</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-tree"></i>
 					</div>
 				</div>
 
-				<div class="choices row transport" data-choice="">
+				<div class="choices row transport" data-choice="transport">
 					<div class="choice-name">
-						<h1>Transport</h1>
+						<h3>Transport</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-bus-alt"></i>
@@ -132,9 +132,6 @@
 			<div class="footer">
 				<div class="back-btn">
 					<i class="fas fa-arrow-left"></i>
-				</div>
-				<div class="location-choice">
-					<h1>Hello</h1>
 				</div>
 			</div>
 		</section>
@@ -148,7 +145,7 @@
 					</svg>
 				</div>
 				<div class="location-title">
-					<h1>HELLO</h1>
+					<h3>Auckland</h3>
 				</div>
 			</div>
 			
@@ -160,7 +157,7 @@
 					<i class="fas fa-arrow-left"></i>
 				</div>
 				<div class="location-choice">
-					<h1>Hello</h1>
+					<h3>Food</h3>
 				</div>
 			</div>
 		</section>
@@ -173,6 +170,9 @@
 	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>
 	<script src="vendore/tilt/tilt.js"></script>
 	<script src="vendore/underscore/underscore.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
 	<script src="js/script.js"></script>
 </body>
 </html>
