worked on JS and created FourSquare API call

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 					<div class="dropdown">
 					  	<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Locations </button>
 						<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-							<button class="dropdown-item" type="button">Auckland Central</button>
-							<button class="dropdown-item" type="button">Rodney & North Shore</button>
-							<button class="dropdown-item" type="button">Waitakere & West Auckland</button>
-							<button class="dropdown-item" type="button">Manukau & East Auckland</button>
-							<button class="dropdown-item" type="button">Papakura & Franklin</button>					
+							<button class="dropdown-item" type="button" data-lng="174.764492" data-lat="-36.850899">Auckland Central</button>
+							<button class="dropdown-item" type="button" data-lng="174.716289" data-lat="-36.716947">Rodney & North Shore</button>
+							<button class="dropdown-item" type="button" data-lng="174.630303" data-lat="-36.879294">Waitakere & West Auckland</button>
+							<button class="dropdown-item" type="button" data-lng="174.889188" data-lat="-36.953047">Manukau & East Auckland</button>
+							<button class="dropdown-item" type="button" data-lng="174.902504" data-lat="-37.202446">Pukekohe & Franklin</button>					
 						</div>
 					</div>
 
@@ -71,55 +71,55 @@
 					</svg>
 				</div>
 				<div class="location-title">
-					<h1>HELLO</h1>
+					<h3>Auckland</h3>
 				</div>
 			</div>
 
 			<div class="accordion choices-list">
 
-				<div class="choices row popular">
+				<div class="choices row popular" data-choice="food">
 					<div class="choice-name">
-						<h1>Popular</h1>
+						<h3>Popular</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-star"></i>
 					</div>
 				</div>
-				<div class="choices row accomodation">
+				<div class="choices row accommodation" data-choice="shops">
 					<div class="choice-name">
-						<h1>Accomodation</h1>
+						<h3>Accommodation</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-hotel"></i>
 					</div>
 				</div>
-				<div class="choices row arts-culture">
+				<div class="choices row arts-culture" data-choice="4d4b7104d754a06370d81259">
 					<div class="choice-name">
-						<h1>Arts & Culture</h1>
+						<h3>Arts & Culture</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-theater-masks"></i>
 					</div>
 				</div>
-				<div class="choices row buses">
+				<div class="choices row buses" data-choice="Buses">
 					<div class="choice-name">
-						<h1>Buses</h1>
+						<h3>Buses</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-bus-alt"></i>
 					</div>
 				</div>
-				<div class="choices row food-beverage">
+				<div class="choices row food-beverage" data-choice="Eateries">
 					<div class="choice-name">
-						<h1>Food & Beverages</h1>
+						<h3>Food & Beverages</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-coffee"></i>
 					</div>
 				</div>
-				<div class="choices row parks-walks">
+				<div class="choices row parks-walks" data-choice="Parks">
 					<div class="choice-name">
-						<h1>Parks & Walks</h1>
+						<h3>Parks & Walks</h3>
 					</div>
 					<div class="drop-btn">
 						<i class="fas fa-tree"></i>
@@ -131,7 +131,7 @@
 					<i class="fas fa-arrow-left"></i>
 				</div>
 				<div class="location-choice">
-					<h1>HELLO</h1>
+					<h3>Auckland</h3>
 				</div>
 			</div>
 		</section>
@@ -145,7 +145,7 @@
 					</svg>
 				</div>
 				<div class="location-title">
-					<h1>HELLO</h1>
+					<h3>Auckland</h3>
 				</div>
 			</div>
 			
@@ -157,7 +157,7 @@
 					<i class="fas fa-arrow-left"></i>
 				</div>
 				<div class="location-choice">
-					<h1>HELLO</h1>
+					<h3>Auckland</h3>
 				</div>
 			</div>
 		</section>
