--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	<div class="wrapper">
 
-		<section id="loading-page" class="section section-0">
+		<section id="loading-page" class="section section-1">
 			<div class="content">
 				<div>
 					<img class="img-gritting" src="assets/images/hello.png" alt="HELLO">
@@ -26,10 +26,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- <section class="section section-1">
-			
-		</section>
- -->
+
 		<section class="section section-2 current-section">
 			
 			<div class="header">
@@ -42,24 +39,22 @@
 					<h3>select place</h3>
 				</div>
 				<div class="selectplace-dropdown dropdown show">
-					  <a class="dropdown-toggle dropdown-header" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					    Auckland
-					  </a>
-					  <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-					    <li class="dropdown-item" v-for="suburb in suburbs">{{suburb.name}}</li>
-					  </ul>
+					<h1>Auckland</h1>
+					<h3 class="error-suburb">select suburb!</h3>
+					<a class="dropdown-toggle dropdown-header" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					    Suburb
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+					   	<li class="dropdown-item" v-for="suburb in suburbs">{{suburb.name}}</li>
+					</ul>
 				</div>
-				<div class="selestplace-selected">
-					<h3></h3>
-				</div>
-				<div class="selectplace-button">
+				<div id="explore" class="selectplace-button">
 					<img src="assets/images/explore.png" alt="explore">
 				</div>
-			</div>
-			
+			</div>			
 		</section>
 
-		<section class="section section-3">
+		<section class="section section-3 slide-in">
 
 			<div class="header">
 				<div class="logo">
@@ -125,11 +120,8 @@
 				</div>
 			</div>
 			<div class="footer">
-				<div id="back-selectsuburb" class="back-btn">
+				<div id="back-section2" class="back-btn">
 					<i class="fas fa-arrow-left"></i>
-				</div>
-				<div class="location-choice">
-					<h1>Hello</h1>
 				</div>
 			</div>
 		</section>
@@ -151,7 +143,7 @@
 			</div>
 
 			<div class="footer">
-				<div id="back-selectplaces" class="back-btn">
+				<div id="back-section3" class="back-btn">
 					<i class="fas fa-arrow-left"></i>
 				</div>
 				<div class="location-choice">
@@ -159,7 +151,6 @@
 				</div>
 			</div>
 		</section>
-
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
