--- a/index.html
+++ b/index.html
@@ -151,6 +151,25 @@
 			
 			<div id="map">
 			</div>
+		
+			<div class="modal" id="venue-modal" tabindex="-1" role="dialog">
+			  <div class="modal-dialog" role="document">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			      	<button type="button" class="path" data-dismiss="modal">
+			      		<i class="fas fa-directions"></i>
+			        </button>
+			        <h2 class="modal-title">Modal title</h2>
+			        <button type="button" class="close" data-dismiss="modal">
+			        	<i class="fas fa-times"></i>
+			        </button>
+			      </div>
+			      <div class="modal-body">
+			        <p>Modal body text goes here.</p>
+			      </div>
+			    </div>
+			  </div>
+			</div>
 
 			<div class="footer">
 				<div class="back-btn">
