--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	
-	<div class="wrapper">
+	<div class="mobile">
 
 		<section id="loading-page" class="section section-1">
 			<div class="content">
@@ -40,12 +40,12 @@
 				</div>
 				<div class="selectplace-dropdown dropdown show">
 					<h1>Auckland</h1>
-					<h3 class="error-suburb">select suburb!</h3>
-					<a class="dropdown-toggle dropdown-header" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<h3 class="error-suburb">Surburb is not selected!</h3>
+					<a id="dropdown-header-mobile" class="dropdown-toggle dropdown-header" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					    Suburb
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-					   	<li class="dropdown-item" v-for="suburb in suburbs">{{suburb.name}}</li>
+					   	<li class="dropdown-item dropdown-item-mobile" v-for="suburb in suburbs">{{suburb.name}}</li>
 					</ul>
 				</div>
 				<div id="explore" class="selectplace-button">
@@ -68,7 +68,7 @@
 				</div>
 			</div>
 
-			<div class="accordion choices-list">
+			<div class="choices-list">
 
 				<div class="choices row popular">
 					<div class="choice-name">
@@ -151,6 +151,78 @@
 				</div>
 			</div>
 		</section>
+	</div>
+
+	<div class="desktop">
+		<header>
+			<div class="header-wrapper">
+				<div class="tag-select">select place</div>
+				<div class="logo-white">
+					<img src="assets/images/logo-white.png" alt="GLOBE">
+				</div>
+				<div class="media">
+					<i class="fab fa-facebook-square"></i>
+					<i class="fas fa-camera-retro"></i>
+					<i class="fab fa-twitter-square"></i>
+				</div>
+			</div>
+		</header>
+		<div class="search-bar">
+			<div class="search-wrapper container">
+				<div class="row no-gutters">
+					<div class="col-3">
+						<div class="dropdown show">
+							<a class="dropdown-toggle dropdown-header" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							    City
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+							   	<li class="dropdown-item">Auckland</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-3">
+						<div class="dropdown show">
+							<h3 class="error-suburb">Surburb is not selected!</h3>
+							<a class="dropdown-toggle dropdown-header" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							    Suburb
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+							   	<li class="dropdown-item" v-for="suburb in suburbs">{{suburb.name}}</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-3 offset-3">
+						<div class="selectplace-button">
+							<img src="assets/images/explore.png" alt="explore">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<main>
+			<div class="main-wrapper container">
+				<div class="row no-gutters">
+					<div class="col-3">
+						<div class="dropdown show">
+							<a class="dropdown-toggle dropdown-header" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							    Popular
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+							   	<li class="dropdown-item">Popular</li>
+							   	<li class="dropdown-item">Accomondation</li>
+							   	<li class="dropdown-item">Art &amp; Culture</li>
+							   	<li class="dropdown-item">Buses</li>
+							   	<li class="dropdown-item">Food &amp; Beverage</li>
+							   	<li class="dropdown-item">Parks &amp; Walks</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-9">
+						<div id="map-desktop"></div>
+					</div>
+				</div>
+			</div>
+		</main>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
