--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 <body>
 	
 	<div class="mobile">
+	<!-- 	<header>
+			<div class="header-wrapper">
+				<div class="tag-select">select place</div>
+				<div class="logo-white">
+					<img src="assets/images/logo-white.png" alt="GLOBE">
+				</div>
+				<div class="media">
+					<i class="fab fa-facebook-square"></i>
+					<i class="fas fa-camera-retro"></i>
+					<i class="fab fa-twitter-square"></i>
+				</div>
+			</div>
+		</header> -->
 
 		<section id="loading-page" class="section section-1">
 			<div class="content">
@@ -45,7 +58,7 @@
 					    Suburb
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-					   	<li class="dropdown-item dropdown-item-mobile" v-for="suburb in suburbs">{{suburb.name}}</li>
+					   	<li class="dropdown-item dropdown-item-mobile" v-bind:data-suburbid="suburb.suburbId" v-for="suburb in suburbs">{{suburb.name}}</li>
 					</ul>
 				</div>
 				<div id="explore" class="selectplace-button">
@@ -153,7 +166,7 @@
 		</section>
 	</div>
 
-	<div class="desktop">
+	<!-- <div class="desktop">
 		<header>
 			<div class="header-wrapper">
 				<div class="tag-select">select place</div>
@@ -223,7 +236,7 @@
 				</div>
 			</div>
 		</main>
-	</div>
+	</div> -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>
