changed colour scheme and worked on API

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="wrapper">
 
 		<section class="section section-0">
-			<div class="content">
+			<div class="hello btn">
 				<div>
 					<img class="img-gritting" src="assets/images/hello.png" alt="HELLO">
 				</div>
@@ -26,10 +26,6 @@
 				</div>
 			</div>
 		</section>
-<!-- 		<section class="section section-1">
-			
-		</section> -->
-
 		<section class="section section-2">
 			
 			<div class="header">
