--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
 			      	<button type="button" class="path" data-dismiss="modal">
 			      		<i class="fas fa-directions"></i>
 			        </button>
-			        <h2 class="modal-title">Modal title</h2>
 			        <button type="button" class="close" data-dismiss="modal">
 			        	<i class="fas fa-times"></i>
 			        </button>
 			      </div>
 			      <div class="modal-body">
-			        <p>Modal body text goes here.</p>
+			      	<div class="choice-info"></div>
+			      	<div class="img-here"></div>
 			      </div>
 			    </div>
 			  </div>
@@ -182,6 +182,22 @@
 		</section>
 
 	</div>
+	<svg class="icons">
+      <g class="star">
+        <path d="M77.2,62.1l18.4-17.4c3.8-3.5,1.7-9.9-3.4-10.5l-26-3.4L55.3,7.9c-2.2-4.7-8.9-4.7-11.1,0L32.9,31.6L7.8,34.9    c-5.1,0.7-7.2,7-3.4,10.5l19.1,18l-4.6,24.9c-0.9,5.1,4.4,9,9,6.5l23.1-12.6l22.2,12.1c4.5,2.5,9.9-1.4,9-6.5L77.2,62.1z"/>
+      </g>
+    </svg>
+
+		<!-- Intro Section  -->
+	<script id="templateChoices" type="text/template7">
+		
+		<h2 class="modal-title"><a href="{{url}}">{{name}}</a></h2>
+		<h4>{{location.address}}<br>Rating : {{rating}}</h4>
+		<div class="direction-link">
+			<a href="https://www.google.com/maps/dir/Current+Location/{{location.lat}},{{location.lng}}">directions</a>
+		</div>
+		
+	</script>	<!-- Intro Section  -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="vendore/popper/popper.min.js"></script>
@@ -189,6 +205,9 @@
 	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>
 	<script src="vendore/anime/anime.js"></script>
 	<script src="vendore/tilt/tilt.js"></script>
+
+	<script src="vendore/template7/template7.js"></script>
+
 	<script src="vendore/underscore/underscore.js"></script>
 
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
