some final changes after validation check

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 				<div class="selectplace-dropdown dropdown show">
 					<h1>Auckland</h1>
 					<h3 class="error-suburb">Surburb is not selected!</h3>
-					<a id="dropdown-header-mobile" class="dropdown-toggle dropdown-header" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<a id="dropdown-header-mobile" class="dropdown-toggle dropdown-header" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					    Suburb
 					</a>
-					<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+					<ul class="dropdown-menu">
 					   	<li class="dropdown-item dropdown-item-mobile" v-bind:data-suburbid="suburb.suburbId" v-for="suburb in suburbs">{{suburb.name}}</li>
 					</ul>
 				</div>
